tests/query_errors/scope_window_script5/error.txt
Error: 
    8 |   signed::min
      |   ^^^^^^^^^^^ The constant signed::min (absolute path) is not defined.